# Oil-Gaz-Daily-Production---FastAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
app/: crud.py  database.py  main.py  schemas.py
app/routes/: materials_api.py  productions_api.py  wells_api.py
database/: database.db  database.py
src/app/: crud.py  main.py  models.py  schemas.py
src/app/routes/: materials_api.py  productions_api.py  wells_api.py
src/database/: database.py
src/gaz_oil_apis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
tests/: conftest.py  test_main.py
